[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Fonts/PeaberryMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Themes/gruve_theme.tres" type="Theme" id=2]
[ext_resource path="res://HUD/Credits.gd" type="Script" id=3]
[ext_resource path="res://Assets/sfx/pause.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/PeaberryBase.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.921569, 0.858824, 0.698039, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=70]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="Shader" id=65]
code = "shader_type canvas_item;


uniform float shake_power = 0.03;

uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;

uniform float shake_speed = 5.0;

uniform float shake_block_size = 30.5;

uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id=66]
shader = SubResource( 65 )
shader_param/shake_power = 0.07
shader_param/shake_rate = 1.0
shader_param/shake_speed = 10.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="Animation" id=67]
resource_name = "Disappear"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/shake_rate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=68]
resource_name = "Pop"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/shake_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=69]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/shake_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Credits" type="Control"]
visible = false
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8
rect_pivot_offset = Vector2( -392, -0.200005 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="Elements" type="VBoxContainer" parent="Menu"]
margin_left = 16.0
margin_top = 8.0
margin_right = 352.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Title" type="Label" parent="Menu/Elements"]
margin_right = 336.0
margin_bottom = 27.0
custom_colors/font_color_shadow = Color( 0.839216, 0.364706, 0.054902, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Credits"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="Menu/Elements"]
margin_top = 35.0
margin_right = 336.0
margin_bottom = 39.0

[node name="Me" type="RichTextLabel" parent="Menu/Elements"]
margin_top = 47.0
margin_right = 336.0
margin_bottom = 65.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/mono_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Game by [color=#fe8019][url=<https://bored-paramecium.itch.io/>]bored_paramecium[/url][/color][/center]
"
text = "Game by bored_paramecium
"
scroll_active = false

[node name="Art" type="RichTextLabel" parent="Menu/Elements"]
margin_top = 73.0
margin_right = 336.0
margin_bottom = 91.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/mono_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Art by [color=#fe8019][url=<https://kenney.itch.io/>]Kenney[/url][/color][/center]
"
text = "Art by Kenney
"
scroll_active = false

[node name="Font" type="RichTextLabel" parent="Menu/Elements"]
margin_top = 99.0
margin_right = 336.0
margin_bottom = 117.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/mono_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Font Peaberry by [color=#fe8019][url=<https://emhuo.itch.io/peaberry-pixel-font>]emhuo[/url][/color][/center]
"
text = "Font Peaberry by emhuo
"
scroll_active = false

[node name="Music" type="RichTextLabel" parent="Menu/Elements"]
margin_top = 125.0
margin_right = 336.0
margin_bottom = 143.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/mono_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Music by [color=#fe8019][url=<https://opengameart.org/content/nes-shooter-music-5-tracks-3-jingles>]SketchyLogic[/url][/color][/center]
"
text = "Music by SketchyLogic
"
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="Menu/Elements"]
margin_top = 151.0
margin_right = 336.0
margin_bottom = 155.0

[node name="Godot" type="RichTextLabel" parent="Menu/Elements"]
margin_top = 163.0
margin_right = 336.0
margin_bottom = 181.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/mono_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Made with the Godot engine:
[/center]
"
text = "Made with the Godot engine:

"
scroll_active = false

[node name="License" type="RichTextLabel" parent="Menu/Elements"]
margin_top = 189.0
margin_right = 336.0
margin_bottom = 329.0
rect_min_size = Vector2( 0, 140 )
size_flags_vertical = 3
custom_colors/default_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/normal_font = SubResource( 70 )
bbcode_enabled = true
bbcode_text = "Copyright (c) 2007-2022 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2022 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

-- Godot Engine <https://godotengine.org>"
text = "Copyright (c) 2007-2022 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2022 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

-- Godot Engine <https://godotengine.org>"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 66 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
anims/Disappear = SubResource( 67 )
anims/Pop = SubResource( 68 )
anims/RESET = SubResource( 69 )

[connection signal="meta_clicked" from="Menu/Elements/Me" to="." method="_on_Me_meta_clicked"]
[connection signal="meta_clicked" from="Menu/Elements/Art" to="." method="_on_Art_meta_clicked"]
[connection signal="meta_clicked" from="Menu/Elements/Font" to="." method="_on_Font_meta_clicked"]
[connection signal="meta_clicked" from="Menu/Elements/Music" to="." method="_on_Music_meta_clicked"]
